load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "experiment_info",
    srcs = ["_experiment_info.py"],
    deps = [
        "//snowflake/ml/registry/_manager:model_manager",
    ],
)

py_test(
    name = "experiment_info_test",
    srcs = ["_experiment_info_test.py"],
    main = "_experiment_info_test.py",
    tags = ["feature:observability"],
    deps = [
        ":experiment_info",
        "//snowflake/ml/test_utils:mock_progress",
    ],
)

py_library(
    name = "experiment_tracking",
    srcs = ["experiment_tracking.py"],
    deps = [
        "//snowflake/ml/_internal/human_readable_id:hrid_generator",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/experiment/_client:experiment_tracking_sql_client",
        "//snowflake/ml/experiment/_entities:entities",
        "//snowflake/ml/registry",
    ],
)

py_test(
    name = "experiment_tracking_test",
    srcs = ["experiment_tracking_test.py"],
    tags = ["feature:observability"],
    deps = [
        ":experiment_tracking",
    ],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
)

py_test(
    name = "utils_test",
    srcs = ["utils_test.py"],
    tags = ["feature:observability"],
    deps = [":utils"],
)

py_library(
    name = "experiment",
    srcs = ["__init__.py"],
    deps = [
        ":experiment_tracking",
        "//snowflake/ml/experiment/callback",
    ],
)

py_package(
    name = "experiment_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":experiment",
    ],
)
