load("//bazel:py_rules.bzl", "py_library", "py_package")

package_group(
    name = "feature_store",
    packages = [
        "//snowflake/ml/feature_store/...",
    ],
)

package(default_visibility = ["//visibility:public"])

py_library(
    name = "init",
    srcs = [
        "__init__.py",
    ],
    deps = [
        "//snowflake/ml/_internal:init_utils",
    ],
)

py_library(
    name = "feature_store_lib",
    srcs = [
        "access_manager.py",
        "entity.py",
        "feature_store.py",
        "feature_view.py",
    ],
    deps = [
        ":init",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/lineage:lineage_utils",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/_internal/utils:query_result_checker",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/dataset",
    ],
)

py_package(
    name = "fs_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":feature_store_lib",
    ],
)
