load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package_group(
    name = "feature_store",
    packages = [
        "//snowflake/ml/feature_store/...",
    ],
)

package(default_visibility = ["//visibility:public"])

py_library(
    name = "init",
    srcs = [
        "__init__.py",
    ],
    deps = [
        "//snowflake/ml/_internal:init_utils",
        "//snowflake/ml/lineage",
    ],
)

py_library(
    name = "feature_store_lib",
    srcs = [
        "access_manager.py",
        "aggregation.py",
        "entity.py",
        "feature.py",
        "feature_store.py",
        "feature_view.py",
        "metadata_manager.py",
        "stream_source.py",
        "tile_sql_generator.py",
    ],
    deps = [
        ":init",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/lineage:lineage_utils",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/_internal/utils:query_result_checker",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/dataset",
        "//snowflake/ml/lineage",
        "//snowflake/ml/utils:sql_client",
    ],
)

py_package(
    name = "fs_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":feature_store_lib",
        "//snowflake/ml/feature_store/examples:feature_store_examples",
    ],
)

# Unit tests
py_test(
    name = "feature_view_test",
    srcs = ["feature_view_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "aggregation_test",
    srcs = ["aggregation_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "stream_source_test",
    srcs = ["stream_source_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_stream_source_test",
    srcs = ["feature_store_stream_source_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "tile_sql_generator_test",
    srcs = ["tile_sql_generator_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)
