load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package_group(
    name = "feature_store",
    packages = [
        "//snowflake/ml/feature_store/...",
    ],
)

package(default_visibility = ["//visibility:public"])

py_library(
    name = "init",
    srcs = [
        "__init__.py",
    ],
    deps = [
        "//snowflake/ml/_internal:init_utils",
        "//snowflake/ml/lineage",
    ],
)

py_library(
    name = "feature_store_lib",
    srcs = [
        "_compute_fn_validation.py",
        "access_manager.py",
        "aggregation.py",
        "entity.py",
        "feature.py",
        "feature_group.py",
        "feature_store.py",
        "feature_view.py",
        "feature_view_append_only_validation.py",
        "feature_view_refresh_freq.py",
        "interval_utils.py",
        "metadata_manager.py",
        "online_service.py",
        "online_service_http_client.py",
        "realtime_config.py",
        "realtime_dataset.py",
        "realtime_dataset_udf.py",
        "realtime_registration.py",
        "request_source.py",
        "spec/__init__.py",
        "spec/builder.py",
        "spec/enums.py",
        "spec/models.py",
        "spec/table_schema_evolution.py",
        "stream_config.py",
        "stream_source.py",
        "streaming_registration.py",
        "tile_sql_generator.py",
    ],
    deps = [
        ":init",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/lineage:lineage_utils",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/_internal/utils:query_result_checker",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/dataset",
        "//snowflake/ml/lineage",
        "//snowflake/ml/utils:authentication",
        "//snowflake/ml/utils:sql_client",
    ],
)

py_package(
    name = "fs_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":feature_store_lib",
        "//snowflake/ml/feature_store/examples:feature_store_examples",
    ],
)

# Unit tests
py_test(
    name = "feature_view_test",
    srcs = ["feature_view_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_group_test",
    srcs = ["feature_group_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_entity_test",
    srcs = ["feature_store_entity_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_feature_group_test",
    srcs = ["feature_store_feature_group_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_feature_group_read_test",
    srcs = ["feature_store_feature_group_read_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_feature_group_training_set_test",
    srcs = ["feature_store_feature_group_training_set_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "online_service_test",
    srcs = ["online_service_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "online_service_http_client_test",
    srcs = ["online_service_http_client_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "aggregation_test",
    srcs = ["aggregation_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "stream_source_test",
    srcs = ["stream_source_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_stream_source_test",
    srcs = ["feature_store_stream_source_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_oft_online_config_test",
    srcs = ["feature_store_oft_online_config_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "tile_sql_generator_test",
    srcs = ["tile_sql_generator_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "spec_models_test",
    srcs = ["spec/models_test.py"],
    main = "spec/models_test.py",
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "spec_table_schema_evolution_test",
    srcs = ["spec/table_schema_evolution_test.py"],
    main = "spec/table_schema_evolution_test.py",
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "spec_builder_test",
    srcs = ["spec/builder_test.py"],
    main = "spec/builder_test.py",
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "stream_config_test",
    srcs = ["stream_config_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "streaming_registration_test",
    srcs = ["streaming_registration_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_initialization_warehouse_test",
    srcs = ["feature_store_initialization_warehouse_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "realtime_config_test",
    srcs = ["realtime_config_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "realtime_registration_test",
    srcs = ["realtime_registration_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_realtime_test",
    srcs = ["feature_store_realtime_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_realtime_dataset_test",
    srcs = ["feature_store_realtime_dataset_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_realtime_feature_view_read_test",
    srcs = ["feature_store_realtime_feature_view_read_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_refresh_history_test",
    srcs = ["feature_store_refresh_history_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_snapshot_validation_test",
    srcs = ["feature_store_snapshot_validation_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)

py_test(
    name = "feature_store_backfill_test",
    srcs = ["feature_store_backfill_test.py"],
    tags = [
        "feature:feature_store",
        "short_regress",
    ],
    deps = [
        ":feature_store_lib",
    ],
)
