load("//bazel:py_rules.bzl", "py_library", "py_test")
load("@rules_python//python:packaging.bzl", "py_package")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "stage_fs",
    srcs = ["stage_fs.py"],
    deps = [
        ":fileset_errors",
        "//snowflake/ml/utils:telemetry",
    ],
)

py_test(
    name = "stage_fs_test",
    srcs = ["stage_fs_test.py"],
    compatible_with_snowpark = False,
    deps = [
        ":stage_fs",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "sfcfs",
    srcs = ["sfcfs.py"],
    deps = [
        ":fileset_errors",
        ":stage_fs",
        "//snowflake/ml/utils:identifier",
        "//snowflake/ml/utils:telemetry",
    ],
)

py_test(
    name = "sfcfs_test",
    srcs = ["sfcfs_test.py"],
    deps = [
        ":sfcfs",
    ],
)

py_package(
    name = "fileset_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":fileset",
        ":sfcfs",
        ":stage_fs",
    ],
)

py_library(
    name = "fileset",
    srcs = ["fileset.py"],
    compatible_with_snowpark = False,
    deps = [
        ":fileset_errors",
        ":sfcfs",
        ":tf_dataset",
        ":torch_datapipe",
        "//snowflake/ml/utils:import_utils",
        "//snowflake/ml/utils:telemetry",
    ],
)

py_test(
    name = "fileset_test",
    srcs = ["fileset_test.py"],
    deps = [
        ":fileset",
    ],
)

py_library(
    name = "parquet_parser",
    srcs = ["parquet_parser.py"],
)

py_test(
    name = "parquet_parser_test",
    srcs = ["parquet_parser_test.py"],
    deps = [
        ":parquet_parser",
        ":parquet_test_util",
    ],
)

py_library(
    name = "torch_datapipe",
    srcs = ["torch_datapipe.py"],
    compatible_with_snowpark = False,
    deps = [":parquet_parser"],
)

py_test(
    name = "torch_datapipe_test",
    srcs = ["torch_datapipe_test.py"],
    compatible_with_snowpark = False,
    deps = [
        ":parquet_test_util",
        ":torch_datapipe",
    ],
)

py_library(
    name = "tf_dataset",
    srcs = ["tf_dataset.py"],
    deps = [":parquet_parser"],
)

py_test(
    name = "tf_dataset_test",
    srcs = ["tf_dataset_test.py"],
    compatible_with_snowpark = False,
    deps = [
        ":parquet_test_util",
        ":tf_dataset",
    ],
)

py_library(
    name = "fileset_errors",
    srcs = ["fileset_errors.py"],
)

py_library(
    name = "parquet_test_util",
    testonly = True,
    srcs = ["parquet_test_util.py"],
)
