load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "stage_fs",
    srcs = ["stage_fs.py"],
    deps = [
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/exceptions",
        "//snowflake/ml/_internal/exceptions:fileset_error_messages",
        "//snowflake/ml/_internal/exceptions:fileset_errors",
    ],
)

py_test(
    name = "stage_fs_test",
    srcs = ["stage_fs_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":stage_fs",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "embedded_stage_fs",
    srcs = ["embedded_stage_fs.py"],
    deps = [
        ":stage_fs",
        "//snowflake/ml/_internal/utils:identifier",
    ],
)

py_test(
    name = "embedded_stage_fs_test",
    srcs = ["embedded_stage_fs_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":embedded_stage_fs",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "sfcfs",
    srcs = ["sfcfs.py"],
    deps = [
        ":stage_fs",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/utils:connection_params",
    ],
)

py_test(
    name = "sfcfs_test",
    srcs = ["sfcfs_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":sfcfs",
    ],
)

py_library(
    name = "snowfs",
    srcs = ["snowfs.py"],
    deps = [
        ":embedded_stage_fs",
        ":sfcfs",
    ],
)

py_test(
    name = "snowfs_test",
    srcs = ["snowfs_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":snowfs",
    ],
)

py_package(
    name = "fileset_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":fileset",
        ":sfcfs",
        ":stage_fs",
    ],
)

py_library(
    name = "fileset",
    srcs = ["fileset.py"],
    deps = [
        ":sfcfs",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/exceptions",
        "//snowflake/ml/_internal/exceptions:fileset_error_messages",
        "//snowflake/ml/_internal/exceptions:fileset_errors",
        "//snowflake/ml/_internal/utils:import_utils",
        "//snowflake/ml/_internal/utils:snowpark_dataframe_utils",
        "//snowflake/ml/data:data_connector",
    ],
)

py_test(
    name = "fileset_test",
    srcs = ["fileset_test.py"],
    tags = ["feature:feature_store"],
    deps = [
        ":fileset",
        "//snowflake/ml/_internal/exceptions:fileset_errors",
        "//snowflake/ml/test_utils:mock_data_frame",
    ],
)

py_library(
    name = "parquet_test_util",
    testonly = True,
    srcs = ["parquet_test_util.py"],
)
