load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

py_package(
    name = "jobs_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":jobs",
    ],
)

py_library(
    name = "ml_job",
    srcs = ["job.py"],
    deps = [
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/_internal/utils:mixins",
        "//snowflake/ml/jobs/_interop:interop",
        "//snowflake/ml/jobs/_utils:constants",
        "//snowflake/ml/jobs/_utils:query_helper",
        "//snowflake/ml/jobs/_utils:stage_utils",
        "//snowflake/ml/jobs/_utils:types",
    ],
)

py_library(
    name = "job_manager",
    srcs = ["manager.py"],
    deps = [
        ":job_definition",
        ":ml_job",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/jobs/_utils:feature_flags",
        "//snowflake/ml/jobs/_utils:payload_utils",
        "//snowflake/ml/jobs/_utils:query_helper",
        "//snowflake/ml/jobs/_utils:spec_utils",
        "//snowflake/ml/jobs/_utils:types",
    ],
)

py_library(
    name = "job_decorators",
    srcs = ["decorators.py"],
    deps = [
        ":job_manager",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/jobs/_utils:payload_utils",
    ],
)

py_test(
    name = "decorators_test",
    srcs = ["decorators_test.py"],
    tags = ["feature:jobs"],
    deps = [
        ":job_decorators",
    ],
)

py_test(
    name = "jobs_test",
    srcs = ["jobs_test.py"],
    tags = ["feature:jobs"],
    deps = [
        "//snowflake/ml/jobs",
    ],
)

py_library(
    name = "job_definition",
    srcs = ["job_definition.py"],
    deps = [
        "//snowflake/ml/jobs:ml_job",
        "//snowflake/ml/jobs/_utils:feature_flags",
        "//snowflake/ml/jobs/_utils:payload_utils",
    ],
)

py_test(
    name = "job_definition_test",
    srcs = ["job_definition_test.py"],
    tags = ["feature:jobs"],
    deps = [
        "//snowflake/ml/jobs:job_definition",
    ],
)

py_test(
    name = "manager_test",
    srcs = ["manager_test.py"],
    tags = ["feature:jobs"],
    deps = [
        "//snowflake/ml/jobs",
    ],
)

py_library(
    name = "jobs",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":job_decorators",
        ":job_manager",
        "//snowflake/ml/jobs/_interop:exception_utils",
        "//snowflake/ml/jobs/_utils:types",
    ],
)
