load("//bazel:py_rules.bzl", "py_library", "py_package", "py_wheel")

package_group(
    name = "monitoring",
    packages = [
        "//snowflake/ml/monitoring/...",
    ],
)

package(default_visibility = ["//visibility:public"])

exports_files([
    "pyproject.toml",
])

py_library(
    name = "monitoring_lib",
    srcs = [
        "monitor.py",
        "shap.py",
    ],
    deps = [
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_package(
    name = "monitoring_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":monitoring_lib",
    ],
)

py_wheel(
    name = "wheel",
    pyproject_toml = ":pyproject.toml",
    deps = ["//snowflake/ml/monitoring:monitoring_pkg"],
)
