load("//bazel:py_rules.bzl", "py_library", "py_package")

package(default_visibility = ["//visibility:public"])

package_group(
    name = "monitoring",
    packages = [
        "//snowflake/ml/monitoring/...",
    ],
)

py_library(
    name = "shap_lib",
    srcs = [
        "shap.py",
    ],
    deps = [
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_library(
    name = "model_monitor_impl",
    deps = [
        "//snowflake/ml/monitoring/_client:model_monitor_lib",
        "//snowflake/ml/monitoring/entities:entities_lib",
    ],
)

py_package(
    name = "monitoring_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":model_monitor_impl",
        ":shap_lib",
    ],
)
