load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

package_group(
    name = "monitoring",
    packages = [
        "//snowflake/ml/monitoring/...",
    ],
)

py_library(
    name = "shap_lib",
    srcs = [
        "shap.py",
    ],
    deps = [
        "//snowflake/ml/_internal:telemetry",
    ],
)

py_library(
    name = "model_monitor",
    srcs = [
        "model_monitor.py",
    ],
    deps = [
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/monitoring/_client:model_monitor_sql_client",
    ],
)

py_library(
    name = "explain_visualize",
    srcs = [
        "explain_visualize.py",
    ],
    deps = [
        "//snowflake/ml/model:model_signature",
    ],
)

py_test(
    name = "model_monitor_test",
    srcs = [
        "model_monitor_test.py",
    ],
    deps = [
        ":model_monitor",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_package(
    name = "monitoring_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":explain_visualize",
        ":model_monitor",
        ":shap_lib",
        "//snowflake/ml/monitoring/_manager:model_monitor_manager",
        "//snowflake/ml/monitoring/entities:entities_lib",
    ],
)
