load("//bazel:py_rules.bzl", "py_library", "py_package", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "model_registry",
    srcs = [
        "artifact.py",
        "model_registry.py",
    ],
    deps = [
        ":artifact_manager",
        ":schema",
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/utils:formatting",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/_internal/utils:query_result_checker",
        "//snowflake/ml/_internal/utils:spcs_attribution_utils",
        "//snowflake/ml/_internal/utils:table_manager",
        "//snowflake/ml/_internal/utils:uri",
        "//snowflake/ml/dataset",
        "//snowflake/ml/model:_api",
        "//snowflake/ml/model:deploy_platforms",
        "//snowflake/ml/model:model_signature",
        "//snowflake/ml/model:type_hints",
        "//snowflake/ml/modeling/framework",
    ],
)

py_test(
    name = "model_registry_test",
    srcs = ["model_registry_test.py"],
    deps = [
        ":model_registry",
        ":schema",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "schema",
    srcs = [
        "_initial_schema.py",
        "_schema.py",
        "_schema_upgrade_plans.py",
        "_schema_version_manager.py",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//snowflake/ml/_internal/utils:query_result_checker",
        "//snowflake/ml/_internal/utils:table_manager",
    ],
)

py_library(
    name = "artifact_manager",
    srcs = [
        "_artifact_manager.py",
        "artifact.py",
    ],
    deps = [
        ":schema",
        "//snowflake/ml/_internal/utils:formatting",
        "//snowflake/ml/_internal/utils:table_manager",
    ],
)

py_test(
    name = "_artifact_test",
    srcs = ["_artifact_test.py"],
    deps = [
        ":artifact_manager",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_library(
    name = "registry",
    srcs = [
        "registry.py",
    ],
    deps = [
        "//snowflake/ml/_internal:telemetry",
        "//snowflake/ml/_internal/utils:identifier",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/model:model_signature",
        "//snowflake/ml/model:type_hints",
        "//snowflake/ml/model/_client/model:model_impl",
        "//snowflake/ml/model/_client/model:model_version_impl",
        "//snowflake/ml/model/_client/ops:model_ops",
        "//snowflake/ml/model/_model_composer:model_composer",
    ],
)

py_test(
    name = "registry_test",
    srcs = [
        "registry_test.py",
    ],
    deps = [
        ":registry",
        "//snowflake/ml/_internal/utils:sql_identifier",
        "//snowflake/ml/model/_client/model:model_version_impl",
        "//snowflake/ml/model/_model_composer:model_composer",
        "//snowflake/ml/test_utils:mock_data_frame",
        "//snowflake/ml/test_utils:mock_session",
    ],
)

py_package(
    name = "model_registry_pkg",
    packages = ["snowflake.ml"],
    deps = [
        ":model_registry",
        ":registry",
    ],
)
